Fixed Favicon (more visible)

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,6 @@
 
 
 /* Site colours */
-/* OLD FROM DINO SITE */
-/* :root {
-    --backgroundColour: #1A1D1A;
-    --textColour: #ffffff;
-    --textColourALT: #000000;
-    --siteBackdrop: #354F52;
-    --headingColour: #EB5439;
-    --accentColourLIGHTGRN: #84a98c;
-    --accentColourDARKGRN: #52796f;
-} */
-/* UPDATED COLOURS */
 :root {
     --backgroundColour: #1A1D1A;
     --textColour: #ffffff;
